Fixed issue with page content overflowing if browser window width was short
This meant that pages such as about section, the content would spill
over since height was fixed to fill view height. THis has ben changed to
that is now the min height.

--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -10,7 +10,7 @@
     justify-content: center;
     flex-direction: column;
 
-    height: inherit;
+    height: 100vh;
 }
 
 .title {
